--- a/Home.css
+++ b/Home.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: url("np://user.desktop.nicepage.com/Site_84202221/images/1db315228240eb2ed1a3432ab564f4f6.png?rand=ecbc");
+  background-image: url("images/1db315228240eb2ed1a3432ab564f4f6.png");
   background-position: 50% 0%;
   min-height: 659px;
 }
@@ -16,7 +16,7 @@
 .u-section-1 .u-image-1 {
   width: 416px;
   height: 416px;
-  background-image: url("np://user.desktop.nicepage.com/Site_84202221/images/img2.jpg?rand=6e21");
+  background-image: url("images/img2.jpg");
   background-position: 50% 50%;
   transition-duration: 0.5s;
   box-shadow: 2px 0 0 0 rgba(0,0,0,0);
@@ -214,7 +214,7 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 180deg;
   --animation-custom_in-scale: 1;
-  background-image: url("np://user.desktop.nicepage.com/Site_84202221/images/841015554-0.jpeg?rand=9910");
+  background-image: url("images/841015554-0.jpeg");
   background-position: 50% 50%;
   margin: 0 auto 0 72px;
 }
@@ -716,21 +716,21 @@
   padding: 10px;
 }
 
+.u-section-5 .u-text-3 {
+  font-weight: 700;
+  margin: 0 auto;
+}
+
 .u-section-5 .u-image-1 {
   width: 178px;
   height: 178px;
-  background-image: url("np://user.desktop.nicepage.com/Site_84202221/images/841015554-01.jpeg?rand=ab70");
+  background-image: url("images/841015554-01.jpeg");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: -400px;
   --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 180deg;
   --animation-custom_in-scale: 1;
-  margin: 0 auto;
-}
-
-.u-section-5 .u-text-3 {
-  font-weight: 700;
   margin: 29px auto 0;
 }
 
@@ -742,21 +742,21 @@
   padding: 10px;
 }
 
+.u-section-5 .u-text-5 {
+  font-weight: 700;
+  margin: 0 auto;
+}
+
 .u-section-5 .u-image-2 {
   width: 178px;
   height: 178px;
-  background-image: url("np://user.desktop.nicepage.com/Site_84202221/images/8d6be29408a58559c889eef5ad175d116ec9654c6aaf86ac7e9a9cb3eca2aafc290be0e9ab65e6932120c40fd87110ac8dd4877dd7ebf3a996206e_1280.png?rand=afca");
+  background-image: url("images/8d6be29408a58559c889eef5ad175d116ec9654c6aaf86ac7e9a9cb3eca2aafc290be0e9ab65e6932120c40fd87110ac8dd4877dd7ebf3a996206e_1280.png");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: -400px;
   --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 180deg;
   --animation-custom_in-scale: 1;
-  margin: 0 auto;
-}
-
-.u-section-5 .u-text-5 {
-  font-weight: 700;
   margin: 29px auto 0;
 }
 
@@ -768,21 +768,21 @@
   padding: 10px;
 }
 
+.u-section-5 .u-text-7 {
+  font-weight: 700;
+  margin: 0 auto;
+}
+
 .u-section-5 .u-image-3 {
   width: 178px;
   height: 178px;
-  background-image: url("np://user.desktop.nicepage.com/Site_84202221/images/bc7053b3876404ff0af85f47c9211581a9408899f5e774a0fa4fbe5f64d422341ae49bace4f00e2953f510290f3a2513da71bfec9887291147bffc_1280.png?rand=1d63");
+  background-image: url("images/bc7053b3876404ff0af85f47c9211581a9408899f5e774a0fa4fbe5f64d422341ae49bace4f00e2953f510290f3a2513da71bfec9887291147bffc_1280.png");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: -400px;
   --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 180deg;
   --animation-custom_in-scale: 1;
-  margin: 0 auto;
-}
-
-.u-section-5 .u-text-7 {
-  font-weight: 700;
   margin: 29px auto 0;
 }
 
@@ -794,21 +794,21 @@
   padding: 10px;
 }
 
+.u-section-5 .u-text-9 {
+  font-weight: 700;
+  margin: 0 auto;
+}
+
 .u-section-5 .u-image-4 {
   width: 178px;
   height: 178px;
-  background-image: url("np://user.desktop.nicepage.com/Site_84202221/images/caaf0349e95e397b2ceea9793e274b838d480859792a3f273a019f9ee7340dc51d8d4a33a3a0c8990eb5b2c2ba705544b747ca637f6f76a7ad0241_1280.png?rand=1e40");
+  background-image: url("images/caaf0349e95e397b2ceea9793e274b838d480859792a3f273a019f9ee7340dc51d8d4a33a3a0c8990eb5b2c2ba705544b747ca637f6f76a7ad0241_1280.png");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: -400px;
   --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 180deg;
   --animation-custom_in-scale: 1;
-  margin: 0 auto;
-}
-
-.u-section-5 .u-text-9 {
-  font-weight: 700;
   margin: 29px auto 0;
 }
 
@@ -856,12 +856,12 @@
     margin-top: 124px;
   }
 } .u-section-6 {
-  background-image: url("np://user.desktop.nicepage.com/Site_84202221/images/Top-10-Healthcare-Tech-1920x800.jpg?rand=b2ab");
+  background-image: url("images/Top-10-Healthcare-Tech-1920x800.jpg");
   background-position: 50% 50%;
 }
 
 .u-section-6 .u-sheet-1 {
-  min-height: 578px;
+  min-height: 516px;
 }
 
 .u-section-6 .u-group-1 {
@@ -902,7 +902,7 @@
 
 @media (max-width: 1199px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 477px;
+    min-height: 425px;
   }
 
   .u-section-6 .u-group-1 {
@@ -917,7 +917,7 @@
 
 @media (max-width: 991px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 365px;
+    min-height: 326px;
   }
 
   .u-section-6 .u-text-1 {
@@ -927,7 +927,7 @@
 
 @media (max-width: 767px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 274px;
+    min-height: 245px;
   }
 
   .u-section-6 .u-group-1 {
@@ -942,7 +942,7 @@
 
 @media (max-width: 575px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 173px;
+    min-height: 154px;
   }
 
   .u-section-6 .u-group-1 {
